ingress-bar.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bar
  annotations:  
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - bar.bettercallshao.com
    secretName: letsencrypt-prod
  rules:
  - host: bar.bettercallshao.com
    http:
      paths:
      - backend:
          serviceName: net-test
          servicePort: 80
