ingress-orc.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: orc
  namespace: orc
spec:
  rules:
  - host: orc.bettercallshao.com
    http:
      paths:
      - backend:
          serviceName: strapi
          servicePort: 80
  tls:
  - hosts:
    - orc.bettercallshao.com
    secretName: letsencrypt-prod
